# ComfyUI-ImgSlider

./: .gitignore  LICENSE  README.md  __init__.py  example_workflow.json  nodes.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish_action.yml
web/js/: imgslider.js
